--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 add_executable(rpisensorclient RPISensorClient.c MQTT.c)
 
-
-target_link_library((rpisensorclient "${LIB_MQTT}")
+target_link_library(rpisensorclient "${LIB_MQTT}")
 
 INSTALL(FILES bin/rpisensorclient DESTINATION usr/sbin)
 
