--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,8 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 add_executable(rpisensorclient RPISensorClient.c MQTT.c)
 
-target_link_library(rpisensorclient "${LIB_MQTT}")
-target_link_library(rpisensorclient "${LIB_WIRING}")
+target_link_libraries(rpisensorclient "${LIB_MQTT}")
+target_link_libraries(rpisensorclient "${LIB_WIRING}")
 
 INSTALL(FILES bin/rpisensorclient DESTINATION usr/sbin)
 
