--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -60,8 +60,8 @@ REPORT_CYCLE  300
 #
 # For each sensor a the digital value will be read an in case it changed compared to the
 # last reading a message will be sent.
-# Topic:    <Label>/<prefix>-<MAC>/<GPIO PIN>
-# Message:  {"<Label>":"<value>"}
+# Topic:    <Label>/<prefix>-<MAC>/<GPIO PIN>   example:  PIR/BB-9c87/12
+# Message:  {"<Label>":"<value>"}               example:  {"PIR":"1"}
 
 # ---------------------------------------------------------------------------------------
 # GPIO pin.      Reverse         Label
