--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -14,7 +14,7 @@ MQTT_BROKER_IP 192.168.100.26
 # ---------------------------------------------------------------------------------------
 # port number MQTT server is lestening on
 # ---------------------------------------------------------------------------------------
-MQTT_BROKER_PORT 1883
+MQTT_BROKER_PORT 1881
 
 # ---------------------------------------------------------------------------------------
 # Keepalive value for MQTT connection
@@ -67,9 +67,7 @@ REPORT_CYCLE  300
 # GPIO pin.      Reverse         Label
 # ---------------------------------------------------------------------------------------
 
-# Light sensor on PIN 2
+# Light sensor at PIN 1
 SENSOR  2 0 LGT
-# Noise etector on pin 3
-SENSOR  3 0 SND
-# Motion detector on PIN 12, reverse ouput
+# Motion detector at PIN 12, reverse ouput
 SENSOR 12 1 PIR
