--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -14,7 +14,7 @@ MQTT_BROKER_IP 192.168.100.26
 # ---------------------------------------------------------------------------------------
 # port number MQTT server is lestening on
 # ---------------------------------------------------------------------------------------
-MQTT_BROKER_PORT
+MQTT_BROKER_PORT 1882
 
 # ---------------------------------------------------------------------------------------
 # Keepalive value for MQTT connection
