--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -29,7 +29,7 @@ PID_FILE /var/run/RPISensorClient.pid
 # ---------------------------------------------------------------------------------------
 # The MQTT topic will contain the last two bytes of this interfaces MAC address.
 # ---------------------------------------------------------------------------------------
-MQTT_INTERFACE eth0
+MQTT_INTERFACE wlan0
 
 # ---------------------------------------------------------------------------------------
 # The MQTT topic will contain this prefix
@@ -69,5 +69,6 @@ REPORT_CYCLE  300
 
 # Light sensor at PIN 1
 SENSOR  1 1 LGT
+
 # Motion detector at PIN 16, reverse ouput
 SENSOR 16 0 PIR
