--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -68,7 +68,15 @@ REPORT_CYCLE  300
 # ---------------------------------------------------------------------------------------
 
 # Light sensor at PIN 1
-SENSOR  1 1 LGT
+#SENSOR  1 1 LGT
 
 # Motion detector at PIN 16, reverse ouput
-SENSOR 16 0 PIR
+#SENSOR 16 0 PIR
+
+
+SENSOR  2 1 LGT
+SENSOR  3 1 SND
+SENSOR 12 0 PIR
+
+
+
