--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -29,7 +29,7 @@ PID_FILE /var/run/RPISensorClient.pid
 # ---------------------------------------------------------------------------------------
 # The MQTT topic will contain the last two bytes of this interfaces MAC address.
 # ---------------------------------------------------------------------------------------
-MQTT_INTERFACE wlan0
+MQTT_INTERFACE eth0
 
 # ---------------------------------------------------------------------------------------
 # The MQTT topic will contain this prefix
