--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -81,9 +81,19 @@ REPORT_CYCLE  300
 # last reading a message will be sent.
 # Topic:    <Label>/<prefix>-<MAC>/<GPIO PIN>   example:  PIR/BB-9c87/12
 # Message:  {"<Label>":"<value>"}               example:  {"PIR":"1"}
-
+#
 # ---------------------------------------------------------------------------------------
-# GPIO pin.      Reverse         Label
+#
+# For each sensor you need to specify
+#   PIN:         GPIO Pin the sensor is connected to
+#   Type:        Sensor type one of:
+#      DIGITAL   Read pin High/Low status {"<label>":"1"}
+#      DHT11     Read DHT11 values {"Humidity":"xx","Temperature":"xx"}
+#   Invert:      Invert the reading for type DIGITAL
+#   Frequency:   Sensor value will be read every <n> useconds
+#   Label        Label to use in MQTT topic/message
+#
+# Pin Type Invert Frequenxy Label
 # ---------------------------------------------------------------------------------------
 
 # Light sensor at PIN 1
