--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -93,19 +93,9 @@ REPORT_CYCLE  300
 #   Frequency:   Sensor value will be read every <n> useconds
 #   Label        Label to use in MQTT topic/message
 #
-# Pin Type Invert Frequenxy Label
+# Pin Type Invert Frequency Label
 # ---------------------------------------------------------------------------------------
 
-# Light sensor at PIN 1
-#SENSOR  1 1 LGT
-
-# Motion detector at PIN 16, reverse ouput
-#SENSOR 16 0 PIR
-
-
-SENSOR  2 1 LGT
-SENSOR  3 1 SND
-SENSOR 12 0 PIR
-
-
-
+SENSOR  2 DIGITAL 1 100 LGT
+SENSOR  3 DIGITAL 1 100 SND
+SENSOR 12 DIGITAL 0 100 PIR
