--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -97,5 +97,5 @@ REPORT_CYCLE  300
 # ---------------------------------------------------------------------------------------
 
 SENSOR  2 DIGITAL 1 100 LGT
-SENSOR  3 DIGITAL 1 100 SND
+SENSOR  3 DHT11 1 100 SND
 SENSOR 12 DIGITAL 0 100 PIR
