--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -63,13 +63,7 @@ PREFIX BB
 DEBUG 1
 
 # ---------------------------------------------------------------------------------------
-# Number of seconds between sensor read cycles
-# ---------------------------------------------------------------------------------------
-CYCLE_TIME 1
-
-# ---------------------------------------------------------------------------------------
-# Number of cycles between two full reports
-# (ie cycle time 1 and reports cycle 300 will lead to a full report every 5 minutes)
+# Number of seconds between two full reports
 # ---------------------------------------------------------------------------------------
 REPORT_CYCLE  300
 
@@ -96,6 +90,6 @@ REPORT_CYCLE  300
 # Pin Type Invert Frequency Label
 # ---------------------------------------------------------------------------------------
 
-SENSOR  2 DIGITAL 1 100 LGT
+SENSOR  2 DIGITAL   1 100 LGT
 SENSOR  3 DHT11_TMP 1 100 TMP
-SENSOR 12 DIGITAL 0 100 PIR
+SENSOR 12 DIGITAL   0 100 PIR
