--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -90,6 +90,12 @@ REPORT_CYCLE  300
 # Pin Type Invert Frequency Label
 # ---------------------------------------------------------------------------------------
 
-SENSOR  2 DIGITAL   1 100 LGT
-SENSOR  3 DHT11_TMP 1 100 TMP
-SENSOR 12 DIGITAL   0 100 PIR
+# --- David ---
+# SENSOR  2 DIGITAL   1 100 LGT
+# SENSOR  3 DHT11_TMP 1 100 TMP
+# SENSOR 12 DIGITAL   0 100 PIR
+
+# --- PiOrange ---
+# SENSOR  1 DIGITAL   0 100 LGT
+# SENSOR 16 DIGITAL   0 100 PIR
+
