--- a/Contrib/rpisensorclient.cfg
+++ b/Contrib/rpisensorclient.cfg
@@ -84,7 +84,7 @@ REPORT_CYCLE  300
 #      DIGITAL   Read pin High/Low status {"<label>":"1"}
 #      DHT11     Read DHT11 values {"Humidity":"xx","Temperature":"xx"}
 #   Invert:      Invert the reading for type DIGITAL
-#   Frequency:   Sensor value will be read every <n> useconds
+#   Frequency:   Sensor value will be read every <n> msecs (100 -> once per second)
 #   Label        Label to use in MQTT topic/message
 #
 # Pin Type Invert Frequency Label
